--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,3 +12,4 @@ jobs:
       - uses: actions/checkout@v2
       - uses: subosito/flutter-action@v1
       - uses: erickzanardo/flutter-gh-pages@v3
+        webRenderer: canvaskit
